crates/test-generator/tests/snapshots/rust/test_generated_abstract_type.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test_fn() -> impl std::fmt::Debug { 42 }

AST:
(source_file
  (function_item
    name: (identifier "test_fn")
    parameters: (parameters)
    return_type: (abstract_type
      trait: (scoped_type_identifier "std::fmt::Debug"
        path: (scoped_identifier "std::fmt"
          path: (identifier "std")
          name: (identifier "fmt")
        )
        name: (type_identifier "Debug")
      )
    )
    body: (block
      (integer_literal "42")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:4 to 1:11 }, name: "test_fn", definition_type: FunctionDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:22 to 1:25 }, name: "std", kind: Identifier, context: Some("scoped_identifier") },
        Usage { position: { 1:27 to 1:30 }, name: "fmt", kind: Identifier, context: Some("scoped_identifier") },
        Usage { position: { 1:32 to 1:37 }, name: "Debug", kind: TypeIdentifier, context: Some("scoped_type_identifier") },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
