crates/test-generator/tests/snapshots/rust/test_generated_assignment_expression.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let mut x1 = 0; x1 = y;

AST:
(source_file
  (let_declaration
    (mutable_specifier)
    pattern: (identifier "x1")
    value: (integer_literal "0")
  )
  (expression_statement
    (assignment_expression
      left: (identifier "x1")
      right: (identifier "y")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "x1",
            position: Position {
                start_line: 1,
                start_column: 9,
                end_line: 1,
                end_column: 11,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "x1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 19,
            },
            context: None,
        },
        Usage {
            name: "y",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 22,
                end_line: 1,
                end_column: 23,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
