crates/test-generator/tests/snapshots/rust/test_generated_associated_type.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
trait TestTrait { type Item; }

AST:
(source_file
  (trait_item
    name: (type_identifier "TestTrait")
    body: (declaration_list
      (associated_type
        name: (type_identifier "Item")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestTrait",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 16,
            },
            definition_type: TypeDefinition,
        },
        Definition {
            name: "Item",
            position: Position {
                start_line: 1,
                start_column: 24,
                end_line: 1,
                end_column: 28,
            },
            definition_type: TypeDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
