crates/test-generator/tests/snapshots/rust/test_generated_attribute_item.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
#[derive(Debug)]
struct TestStruct;

fn test_fn1() -> i32 { 42 }

AST:
(source_file
  (attribute_item
    (attribute
      (identifier "derive")
      arguments: (token_tree
        (identifier "Debug")
      )
    )
  )
  (struct_item
    name: (type_identifier "TestStruct")
  )
  (function_item
    name: (identifier "test_fn1")
    parameters: (parameters)
    return_type: (primitive_type "i32")
    body: (block
      (integer_literal "42")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestStruct",
            position: Position {
                start_line: 2,
                start_column: 8,
                end_line: 2,
                end_column: 18,
            },
            definition_type: StructDefinition,
        },
        Definition {
            name: "test_fn1",
            position: Position {
                start_line: 4,
                start_column: 4,
                end_line: 4,
                end_column: 12,
            },
            definition_type: FunctionDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "derive",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 3,
                end_line: 1,
                end_column: 9,
            },
        },
        Usage {
            name: "Debug",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 10,
                end_line: 1,
                end_column: 15,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 4,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
