crates/test-generator/tests/snapshots/rust/test_generated_bounded_type.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test<T: Clone + Send>(x: T) -> T where T: std::fmt::Debug { x }

AST:
(source_file
  (function_item
    name: (identifier "test")
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier "T")
        bounds: (trait_bounds
          (type_identifier "Clone")
          (type_identifier "Send")
        )
      )
    )
    parameters: (parameters
      (parameter
        pattern: (identifier "x")
        type: (type_identifier "T")
      )
    )
    return_type: (type_identifier "T")
    (where_clause
      (where_predicate
        left: (type_identifier "T")
        bounds: (trait_bounds
          (scoped_type_identifier "std::fmt::Debug"
            path: (scoped_identifier "std::fmt"
              path: (identifier "std")
              name: (identifier "fmt")
            )
            name: (type_identifier "Debug")
          )
        )
      )
    )
    body: (block
      (identifier "x")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:4 to 1:8 }, name: "test", definition_type: FunctionDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:9 to 1:10 }, name: "T", definition_type: TypeDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:26 to 1:27 }, name: "x", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:12 to 1:17 }, name: "Clone", kind: TypeIdentifier, context: None },
        Usage { position: { 1:20 to 1:24 }, name: "Send", kind: TypeIdentifier, context: None },
        Usage { position: { 1:29 to 1:30 }, name: "T", kind: TypeIdentifier, context: None },
        Usage { position: { 1:35 to 1:36 }, name: "T", kind: TypeIdentifier, context: None },
        Usage { position: { 1:43 to 1:44 }, name: "T", kind: TypeIdentifier, context: None },
        Usage { position: { 1:46 to 1:49 }, name: "std", kind: Identifier, context: Some("scoped_identifier") },
        Usage { position: { 1:51 to 1:54 }, name: "fmt", kind: Identifier, context: Some("scoped_identifier") },
        Usage { position: { 1:56 to 1:61 }, name: "Debug", kind: TypeIdentifier, context: Some("scoped_type_identifier") },
        Usage { position: { 1:64 to 1:65 }, name: "x", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
