crates/test-generator/tests/snapshots/rust/test_generated_break_expression.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
'label: loop { break 'label; }

AST:
(source_file
  (expression_statement
    (loop_expression
      (label
        (identifier "label")
      )
      body: (block
        (expression_statement
          (break_expression
            (label
              (identifier "label")
            )
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:2 to 1:7 }, name: "label", kind: Identifier, context: None },
        Usage { position: { 1:23 to 1:28 }, name: "label", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
